# alert-dispatcher

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  SUBMISSION.md  SUBMISSION_cursor.md  ai-submisson.md.txt  pyproject.toml  pytest-result.txt
.cursor/rules/: project-standards.mdc
.github/workflows/: test.yml
docs/: ai-submission.md  questions.md
src/alert_dispatcher/: __init__.py  main.py  models.py  settings.py  users.py
src/alert_dispatcher/api/: dispatch.py  intern_monolith.py  mute.py
src/alert_dispatcher/providers/: __init__.py  email.py  slack.py
src/alert_dispatcher/repositories/: __init__.py  mute.py  retry.py
src/alert_dispatcher/services/: __init__.py  dispatch_service.py
tests/: conftest.py  test_dispatch_api.py  test_email_provider.py  test_mute_api.py  test_mute_repository.py  test_retry_repository.py
